# F1DataAnalysis

./: .gitignore  .user.yml  README.md  dbt_project.yml  exam_assignment_2_en.html  my-assignments.txt  profiles.yml  pyproject.toml
loader/: load_data.py  run.sh
models/: sources.yml
models/reports/: rpt_incidents.sql  rpt_predictions.sql  schema.yml
models/staging/: schema.yml  stg_constructors_results.sql  stg_drivers.sql  stg_drivers_teams.sql  stg_incidents.sql  stg_races.sql  stg_races_carried_out.sql  stg_teams.sql
models/star/: dim_drivers.sql  dim_races.sql  dim_teams.sql  fct_incidents.sql  fct_points.sql  schema.yml
pages/: constructor_predictions.md  drivers_incidents.md  index.md
raw/api/: api.json
sources/reports/: connection.yaml  incidents.sql  predictions.sql
